[metadata]
name = skrub
version = file: skrub/VERSION.txt
description = Prepping tables for machine learning
long_description = file: README.rst
author = Patricio Cerda
author_email = patricio.cerda@inria.fr
license = BSD
license_files = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
project_urls =
    Homepage = https://skrub-data.org/
    Source = https://github.com/skrub-data/skrub

[options]
include_package_data = True
packages = find:
install_requires =
    scikit-learn>=0.23.0
    numpy>=1.17.3
    scipy>=1.4.0
    pandas>=1.2.0
    requests
    joblib
    pyarrow
python_requires = >=3.8

[options.extras_require]
dev =
    pytest
    pytest-cov
    pytest-xdist
    pytest-xdist[psutil]
    coverage
    mypy
    numpydoc
    flake8
    openml
doc =
    sphinx-gallery
    pydata-sphinx-theme
    sphinxext-opengraph
    matplotlib
    seaborn
    statsmodels
    numpydoc
benchmarks =
    numpy
    pandas
    matplotlib
    seaborn
    tqdm
# Overwrite the previous install_requires for CI testing purposes
# as defined in testing.yml.
min-py38 =
    scikit-learn==0.23.0
    numpy==1.17.3
    scipy==1.4.0
    pandas==1.2.0
min-py39 =
    scikit-learn==0.24.0
    numpy==1.19.3
    scipy==1.6.0
    pandas==1.2.0
min-py310 =
    scikit-learn==1.0.2
    numpy==1.21.3
    scipy==1.8.0
    pandas==1.3.5

[flake8]
# max line length for black
max-line-length = 88
target-version = ['py310']
# Default flake8 3.5 ignored flags
ignore=
    E24,   # check ignored by default in flake8. Meaning unclear.
    E121,  # continuation line under-indented
    E123,  # closing bracket does not match indentation
    E126,  # continuation line over-indented for hanging indent
    E203,  # space before : (needed for how black formats slicing)
    E226,  # missing whitespace around arithmetic operator
    E704,  # multiple statements on one line (def)
    E731,  # do not assign a lambda expression, use a def
    E741,  # do not use variables named 'l', 'O', or 'I'
    W503,  # line break before binary operator
    W504   # line break after binary operator
exclude=
    .git,
    __pycache__,
    dist,
    build

[mypy]
ignore_missing_imports = True
allow_redefinition = True

[codespell]
skip = ./.git,./.mypy_cache
