[metadata]
name = skrub
version = file: skrub/VERSION.txt
description = Prepping tables for machine learning
long_description = file: README.rst
author = Patricio Cerda
author_email = patricio.cerda@inria.fr
license = BSD
license_files = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
project_urls =
    Homepage = https://skrub-data.org/
    Source = https://github.com/skrub-data/skrub

[options]
include_package_data = True
packages = find:
install_requires =
    scikit-learn>=1.2.1
    numpy>=1.23.5
    scipy>=1.9.3
    pandas>=1.5.3
python_requires = >=3.10

[options.extras_require]
dev =
    pytest
    pytest-cov
    # XXX: pin pytest-xdist to workaround:
    # https://github.com/pytest-dev/pytest-xdist/issues/840
    pytest-xdist==2.5.0
    pytest-xdist[psutil]
    coverage
    mypy
    numpydoc
    flake8
    openml
    pre-commit
pyarrow =
    pyarrow
doc =
    sphinx-gallery
    pydata-sphinx-theme
    sphinxext-opengraph
    sphinx-copybutton
    matplotlib
    seaborn
    statsmodels
    numpydoc
    jupyterlite-sphinx
    jupyterlite-pyodide-kernel
    pyarrow
benchmarks =
    numpy
    pandas
    matplotlib
    seaborn
    tqdm
    thefuzz
    autofj
    pyarrow
    loguru
# Overwrite the previous install_requires for CI testing purposes
# as defined in testing.yml.
min-py310 =
    scikit-learn==1.2.1
    numpy==1.23.5
    scipy==1.9.3
    pandas==1.5.3

[flake8]
# max line length for black
max-line-length = 88
target-version = ['py310']
# Default flake8 3.5 ignored flags
ignore=
    # check ignored by default in flake8. Meaning unclear.
    E24,
    # continuation line under-indented
    E121,
    # closing bracket does not match indentation
    E123,
    # continuation line over-indented for hanging indent
    E126,
    # space before : (needed for how black formats slicing)
    E203,
    # missing whitespace around arithmetic operator
    E226,
    # multiple statements on one line (def)
    E704,
    # do not assign a lambda expression, use a def
    E731,
    # do not use variables named 'l', 'O', or 'I'
    E741,
    # line break before binary operator
    W503,
    # line break after binary operator
    W504
per-file-ignores =
# It's fine not to put the import at the top of the file in the examples
# folder.
    examples/*:E402
    doc/conf.py:E402
exclude=
    .git,
    __pycache__,
    dist,
    build

[mypy]
ignore_missing_imports = True
allow_redefinition = True

[codespell]
skip = ./.git,./.mypy_cache
