[metadata]
name = skrub
version = file: skrub/VERSION.txt
description = Prepping tables for machine learning
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Patricio Cerda
author_email = patricio.cerda@inria.fr
license = BSD
license_files = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
project_urls =
    Homepage = https://skrub-data.org/
    Source = https://github.com/skrub-data/skrub

[options]
include_package_data = True
packages = find:
install_requires =
    scikit-learn>=1.2.1
    numpy>=1.23.5
    scipy>=1.9.3
    pandas>=1.5.3
    packaging>=23.1
python_requires = >=3.9

[options.packages.find]
include = skrub*

[options.extras_require]
dev =
    pytest
    pytest-cov
    # XXX: pin pytest-xdist to workaround:
    # https://github.com/pytest-dev/pytest-xdist/issues/840
    pytest-xdist==2.5.0
    pytest-xdist[psutil]
    coverage
    numpydoc
    ruff
    pre-commit
pyarrow =
    pyarrow
polars =
    pyarrow
    polars
doc =
    sphinx-gallery
    pydata-sphinx-theme
    sphinxext-opengraph
    sphinx-copybutton
    matplotlib
    seaborn
    statsmodels
    numpydoc
    jupyterlite-sphinx
    jupyterlite-pyodide-kernel
    pyarrow
benchmarks =
    numpy
    pandas
    matplotlib
    seaborn
    tqdm
    thefuzz
    autofj
    pyarrow
    loguru
# Overwrite the previous install_requires for CI testing purposes
# as defined in testing.yml.
min-py39 =
    scikit-learn==1.2.1
    numpy==1.23.5
    scipy==1.9.3
    pandas==1.5.3
